--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,9 @@
     "target": "es2017",
     "lib": ["esnext", "DOM"],
     "module": "esnext",
+    "jsxImportSource": "vue",
+    "jsx": "preserve",
+    "jsxFactory": "h",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "strict": true,
