--- a/playground/package.json
+++ b/playground/package.json
@@ -5,11 +5,11 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.2",
-    "@vue-macros/volar": "^0.18.10",
-    "vite": "^5.0.4",
-    "vite-plugin-inspect": "^0.8.1",
     "@vue-macros/define-render": "^1.5.1",
     "@vue-macros/reactivity-transform": "^0.4.2",
-    "unplugin-vue-jsx-vapor": "workspace:*"
+    "@vue-macros/volar": "^0.18.10",
+    "unplugin-vue-jsx-vapor": "workspace:*",
+    "vite": "^5.0.4",
+    "vite-plugin-inspect": "^0.8.1"
   }
 }
