--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,30 +28,30 @@ jobs:
       - name: Lint
         run: nr lint
 
-  test:
-    runs-on: ${{ matrix.os }}
+  # test:
+  #   runs-on: ${{ matrix.os }}
 
-    strategy:
-      matrix:
-        node: [16.x, 18.x]
-        os: [ubuntu-latest, windows-latest, macos-latest]
-      fail-fast: false
+  #   strategy:
+  #     matrix:
+  #       node: [16.x, 18.x]
+  #       os: [ubuntu-latest, windows-latest, macos-latest]
+  #     fail-fast: false
 
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set node ${{ matrix.node }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node }}
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Set node ${{ matrix.node }}
+  #       uses: actions/setup-node@v3
+  #       with:
+  #         node-version: ${{ matrix.node }}
 
-      - name: Setup
-        run: npm i -g @antfu/ni
+  #     - name: Setup
+  #       run: npm i -g @antfu/ni
 
-      - name: Install
-        run: nci
+  #     - name: Install
+  #       run: nci
 
-      - name: Build
-        run: nr build
+  #     - name: Build
+  #       run: nr build
 
-      - name: Test
-        run: nr test
+  #     - name: Test
+  #       run: nr test
