feat: support double quote in attribute value

--- a/playground/virtual-dom/tsconfig.json
+++ b/playground/virtual-dom/tsconfig.json
@@ -8,6 +8,9 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
+    "types": [
+      "unplugin-vue-macros/macros-global"
+    ],
     "strict": true,
     "strictNullChecks": true,
     "esModuleInterop": true
