--- a/package.json
+++ b/package.json
@@ -124,6 +124,8 @@
   },
   "dependencies": {
     "@vue-macros/common": "^1.10.0",
+    "html-tags": "^3.3.1",
+    "svg-tags": "^1.0.0",
     "unplugin": "^1.5.1"
   },
   "devDependencies": {
@@ -131,6 +133,7 @@
     "@nuxt/kit": "^3.8.2",
     "@nuxt/schema": "^3.8.2",
     "@types/node": "^20.10.3",
+    "@types/svg-tags": "^1.0.2",
     "bumpp": "^9.2.0",
     "chalk": "^5.3.0",
     "eslint": "^8.55.0",
