--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     }
   },
   "dependencies": {
+    "@babel/parser": "^7.24.7",
     "@vue-macros/common": "^1.10.4",
     "@vue-vapor/compiler-vapor": "3.2024.0-63dbc26",
     "@vue-vapor/vue": "3.2024.0-63dbc26",
