--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "@vue-macros/common": "^1.10.4",
     "@vue-vapor/compiler-vapor": "3.2024.0-63dbc26",
     "@vue-vapor/vue": "3.2024.0-63dbc26",
+    "@vue/shared": "^3.4.31",
     "html-tags": "^4.0.0",
     "svg-tags": "^1.0.0",
     "unplugin": "^1.10.1"
