--- a/package.json
+++ b/package.json
@@ -135,6 +135,8 @@
   "devDependencies": {
     "@antfu/eslint-config": "^2.21.1",
     "@babel/types": "^7.24.7",
+    "@changesets/changelog-github": "^0.5.0",
+    "@changesets/cli": "^2.27.6",
     "@nuxt/kit": "^3.12.2",
     "@nuxt/schema": "^3.12.2",
     "@sxzz/eslint-config": "^3.13.0",
