ci: add publish

--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "play": "npm -C playground run dev",
     "prepublishOnly": "npm run build",
     "release": "bumpp && npm publish",
+    "publish": "pnpm build && changeset publish",
     "start": "esno src/index.ts",
     "test": "vitest"
   },
