--- a/package.json
+++ b/package.json
@@ -126,9 +126,10 @@
   "dependencies": {
     "@babel/parser": "^7.24.7",
     "@vue-macros/common": "^1.10.4",
+    "@vue-vapor/compiler-dom": "3.2024.0-63dbc26",
     "@vue-vapor/compiler-vapor": "3.2024.0-63dbc26",
+    "@vue-vapor/shared": "3.2024.0-4c28469",
     "@vue-vapor/vue": "3.2024.0-63dbc26",
-    "@vue/shared": "^3.4.31",
     "html-tags": "^4.0.0",
     "svg-tags": "^1.0.0",
     "unplugin": "^1.10.1"
@@ -153,7 +154,7 @@
     "rollup": "^4.18.0",
     "tsup": "^8.1.0",
     "typescript": "^5.5.2",
-    "vite": "^5.3.1",
+    "vite": "^5.3.2",
     "vitest": "^1.6.0",
     "webpack": "^5.92.1"
   }
