feat(compiler): support conditional & logical expression

--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
   "dependencies": {
     "@babel/parser": "^7.24.7",
     "@vue-macros/common": "^1.10.4",
+    "@vue-vapor/compiler-core": "3.2024.0-4c28469",
     "@vue-vapor/compiler-dom": "3.2024.0-63dbc26",
     "@vue-vapor/compiler-vapor": "3.2024.0-63dbc26",
     "@vue-vapor/runtime-vapor": "3.2024.0-63dbc26",
