chore: ignore playground

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "esModuleInterop": true,
     "skipLibCheck": true
   },
-  "exclude": ["dist", "eslint.config.js"]
+  "exclude": ["dist", "eslint.config.js", "playground"]
 }
