--- a/package.json
+++ b/package.json
@@ -89,7 +89,6 @@
     "typecheck": "tsc --noEmit",
     "lint": "eslint .",
     "play": "npm -C playground run dev",
-    "prepublishOnly": "npm run build",
     "release": "bumpp && npm publish",
     "publish": "pnpm build && changeset publish",
     "start": "esno src/index.ts",
@@ -126,36 +125,37 @@
   "dependencies": {
     "@babel/parser": "^7.24.7",
     "@vue-macros/common": "^1.10.4",
-    "@vue-vapor/compiler-core": "3.2024.0-4c28469",
-    "@vue-vapor/compiler-dom": "3.2024.0-63dbc26",
-    "@vue-vapor/compiler-vapor": "3.2024.0-63dbc26",
-    "@vue-vapor/runtime-vapor": "3.2024.0-63dbc26",
-    "@vue-vapor/shared": "3.2024.0-4c28469",
-    "@vue-vapor/vue": "3.2024.0-63dbc26",
+    "@vue-vapor/compiler-core": "3.20240702.0-b44ca85",
+    "@vue-vapor/compiler-dom": "3.20240702.0-b44ca85",
+    "@vue-vapor/compiler-vapor": "3.20240702.0-b44ca85",
+    "@vue-vapor/runtime-vapor": "3.20240702.0-b44ca85",
+    "@vue-vapor/shared": "3.20240702.0-b44ca85",
+    "@vue-vapor/vue": "3.20240702.0-b44ca85",
     "html-tags": "^4.0.0",
+    "source-map-js": "^1.2.0",
     "svg-tags": "^1.0.0",
-    "unplugin": "^1.10.1"
+    "unplugin": "^1.11.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.21.1",
+    "@antfu/eslint-config": "^2.21.2",
     "@babel/types": "^7.24.7",
     "@changesets/changelog-github": "^0.5.0",
-    "@changesets/cli": "^2.27.6",
-    "@nuxt/kit": "^3.12.2",
-    "@nuxt/schema": "^3.12.2",
+    "@changesets/cli": "^2.27.7",
+    "@nuxt/kit": "^3.12.3",
+    "@nuxt/schema": "^3.12.3",
     "@sxzz/eslint-config": "^3.13.0",
     "@types/node": "^20.14.9",
     "@types/svg-tags": "^1.0.2",
     "bumpp": "^9.4.1",
     "chalk": "^5.3.0",
-    "eslint": "^9.5.0",
+    "eslint": "^9.6.0",
     "esno": "^4.7.0",
     "fast-glob": "^3.3.2",
     "nodemon": "^3.1.4",
     "rimraf": "^5.0.7",
     "rollup": "^4.18.0",
     "tsup": "^8.1.0",
-    "typescript": "^5.5.2",
+    "typescript": "^5.5.3",
     "vite": "^5.3.2",
     "vitest": "^1.6.0",
     "webpack": "^5.92.1"
