--- a/package.json
+++ b/package.json
@@ -159,5 +159,10 @@
     "vite": "^5.3.2",
     "vitest": "^1.6.0",
     "webpack": "^5.92.1"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "@vue-vapor/compiler-vapor@3.20240702.0-b44ca85": "patches/@vue-vapor__compiler-vapor@3.20240702.0-b44ca85.patch"
+    }
   }
 }
