--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "unplugin-vue-jsx-vapor",
   "version": "1.0.4",
   "packageManager": "pnpm@9.5.0",
-  "description": "Converts Vue JSX to Vapor",
+  "description": "Convert Vue JSX to Vapor",
   "type": "module",
   "keywords": [
     "unplugin",
