--- a/playground/package.json
+++ b/playground/package.json
@@ -5,14 +5,10 @@
   "scripts": {
     "dev": "nodemon -w '../../src/**/*.ts' -e .ts -x vite --port 5174"
   },
-  "dependencies": {
-    "vue": "npm:@vue-vapor/vue@3.2024.0-4c28469"
-  },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
-    "@vue-macros/volar": "^0.23.0",
     "unplugin-vue-jsx-vapor": "workspace:*",
-    "unplugin-vue-macros": "^2.11.5",
+    "unplugin-vue-macros": "https://pkg.pr.new/vue-macros/vue-macros/unplugin-vue-macros@b482dd9",
     "vite": "^5.3.2",
     "vite-plugin-inspect": "^0.8.4"
   }
