--- a/.github/workflows/release-pr.yml
+++ b/.github/workflows/release-pr.yml
@@ -26,4 +26,4 @@ jobs:
         run: pnpm build
 
       - name: Publish
-        run: pnpm dlx pkg-pr-new@0.0 publish --compact
+        run: pnpm dlx pkg-pr-new@0.0 publish
