--- a/playground/tsconfig.json
+++ b/playground/tsconfig.json
@@ -5,8 +5,9 @@
     "jsxFactory": "h",
     "jsxImportSource": "vue",
     "lib": ["esnext", "DOM"],
+    "customConditions": ["dev"],
     "module": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "types": ["vite/client", "unplugin-vue-macros/macros-global"],
     "strict": true,
