--- a/playground/package.json
+++ b/playground/package.json
@@ -3,13 +3,12 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "nodemon -w '../../src/**/*.ts' -e .ts -x vite --port 5174"
+    "dev": "vite --port 5174"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.5",
     "unplugin-vue-jsx-vapor": "workspace:*",
     "unplugin-vue-macros": "https://pkg.pr.new/vue-macros/vue-macros/unplugin-vue-macros@f4ebeab",
-    "vite": "^5.3.2",
+    "vite": "^6.0.0",
     "vite-plugin-inspect": "^0.8.4",
     "vue": "catalog:"
   }
