--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,6 @@
     "esModuleInterop": true,
     "skipLibCheck": true
   },
-  "exclude": ["dist", "eslint.config.js", "playground"]
+  "include": ["packages"],
+  "exclude": ["eslint.config.js", "playground"]
 }
