--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,10 +1,12 @@
 catalog:
-  '@vue/compiler-core': https://pkg.pr.new/vuejs/core-vapor/@vue/compiler-core@2eae25e
-  '@vue/compiler-dom': https://pkg.pr.new/vuejs/core-vapor/@vue/compiler-dom@2eae25e
-  '@vue/compiler-vapor': https://pkg.pr.new/vuejs/core-vapor/@vue/compiler-vapor@2eae25e
-  '@vue/runtime-vapor': https://pkg.pr.new/vuejs/core-vapor/@vue/runtime-vapor@2eae25e
-  '@vue/shared': https://pkg.pr.new/vuejs/core-vapor/@vue/shared@2eae25e
-  vue: https://pkg.pr.new/vuejs/core-vapor/vue@2eae25e
+  '@vue/compiler-core': https://pkg.pr.new/vuejs/vue-vapor/@vue/compiler-core@9f73dbf
+  '@vue/compiler-dom': https://pkg.pr.new/vuejs/vue-vapor/@vue/compiler-dom@9f73dbf
+  '@vue/compiler-vapor': https://pkg.pr.new/vuejs/vue-vapor/@vue/compiler-vapor@9f73dbf
+  '@vue/runtime-vapor': https://pkg.pr.new/vuejs/vue-vapor/@vue/runtime-vapor@9f73dbf
+  '@vue/shared': https://pkg.pr.new/vuejs/vue-vapor/@vue/shared@9f73dbf
+  vue: https://pkg.pr.new/vuejs/vue-vapor/vue@9f73dbf
+  '@babel/types': ^7.26.3 
+  '@babel/parser': ^7.26.3 
 packages:
   - packages/*
   - playground
