--- a/packages/unplugin/package.json
+++ b/packages/unplugin/package.json
@@ -162,6 +162,7 @@
     "rollup": "^4.18.0",
     "tsup": "^8.1.0",
     "typescript": "^5.5.3",
+    "unplugin-raw": "^0.3.1",
     "vite": "^6.0.0",
     "vitest": "^1.6.0",
     "webpack": "^5.92.1"
