--- a/packages/unplugin/package.json
+++ b/packages/unplugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unplugin-vue-jsx-vapor",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "packageManager": "pnpm@9.15.1",
   "description": "Convert Vue JSX to Vapor",
   "type": "module",
@@ -67,10 +67,10 @@
       "require": "./dist/nuxt.cjs",
       "import": "./dist/nuxt.js"
     },
-    "./core": {
-      "dev": "./src/core/index.ts",
-      "require": "./dist/core/index.cjs",
-      "import": "./dist/core/index.js"
+    "./api": {
+      "dev": "./src/api/index.ts",
+      "require": "./dist/api/index.cjs",
+      "import": "./dist/api/index.js"
     },
     "./*": "./*"
   },
@@ -115,9 +115,9 @@
       "require": "./dist/nuxt.cjs",
       "import": "./dist/nuxt.js"
     },
-    "./core": {
-      "require": "./dist/core/index.cjs",
-      "import": "./dist/core/index.js"
+    "./api": {
+      "require": "./dist/api/index.cjs",
+      "import": "./dist/api/index.js"
     },
     "./*": "./*"
   },
