feat: introducing babel-plugin

--- a/packages/unplugin/package.json
+++ b/packages/unplugin/package.json
@@ -168,13 +168,15 @@
     }
   },
   "dependencies": {
+    "@babel/core": "catalog:",
+    "@babel/plugin-transform-typescript": "^7.26.7",
+    "@vue-jsx-vapor/babel": "workspace:*",
     "@vue-jsx-vapor/compiler": "workspace:*",
     "@vue-macros/common": "^1.16.1",
     "magic-string-stack": "^0.1.1",
     "unplugin": "^1.11.0"
   },
   "devDependencies": {
-    "@babel/types": "catalog:",
     "@nuxt/kit": "^3.12.3",
     "@nuxt/schema": "^3.12.3",
     "rollup": "^4.18.0",
