--- a/packages/babel/package.json
+++ b/packages/babel/package.json
@@ -63,7 +63,7 @@
     "@vue-jsx-vapor/compiler": "workspace:*"
   },
   "devDependencies": {
-    "@types/babel__core": "^7.20.5",
+    "@types/babel__core": "catalog:",
     "@types/babel__generator": "^7.6.8",
     "@types/babel__template": "^7.4.4",
     "@types/babel__traverse": "^7.20.6"
