--- a/packages/unplugin/package.json
+++ b/packages/unplugin/package.json
@@ -179,6 +179,7 @@
   "devDependencies": {
     "@nuxt/kit": "^3.12.3",
     "@nuxt/schema": "^3.12.3",
+    "@types/babel__core": "catalog:",
     "rollup": "^4.18.0",
     "tsup": "^8.1.0",
     "typescript": "^5.5.3",
