--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,10 +1,8 @@
 catalog:
-  '@vue/compiler-core': https://pkg.pr.new/vuejs/vue-vapor/@vue/compiler-core@6d5bc43
-  '@vue/compiler-dom': https://pkg.pr.new/vuejs/vue-vapor/@vue/compiler-dom@6d5bc43
-  '@vue/compiler-vapor': https://pkg.pr.new/vuejs/vue-vapor/@vue/compiler-vapor@6d5bc43
-  '@vue/runtime-vapor': https://pkg.pr.new/vuejs/vue-vapor/@vue/runtime-vapor@6d5bc43
-  '@vue/shared': https://pkg.pr.new/vuejs/vue-vapor/@vue/shared@6d5bc43
-  vue: https://pkg.pr.new/vuejs/vue-vapor/vue@6d5bc43
+  '@vue/compiler-dom': https://pkg.pr.new/@vue/compiler-dom@3eccc60
+  '@vue/compiler-vapor': https://pkg.pr.new/@vue/compiler-vapor@3eccc60
+  '@vue/shared': https://pkg.pr.new/@vue/shared@3eccc60
+  vue: https://pkg.pr.new/vue@3eccc60
   '@babel/types': ^7.26.7
   '@babel/core': ^7.26.7
   '@babel/parser': ^7.26.7
