feat(compiler): remove babel/parser

--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -55,10 +55,12 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@babel/parser": "catalog:",
     "@babel/types": "catalog:",
     "@vue/compiler-dom": "catalog:",
     "@vue/compiler-vapor": "catalog:",
     "@vue/shared": "catalog:"
+  },
+  "devDependencies": {
+    "@babel/parser": "catalog:"
   }
 }
