feat(compiler): support string source

--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -55,12 +55,10 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@babel/parser": "catalog:",
     "@babel/types": "catalog:",
     "@vue/compiler-dom": "catalog:",
     "@vue/compiler-vapor": "catalog:",
     "@vue/shared": "catalog:"
-  },
-  "devDependencies": {
-    "@babel/parser": "catalog:"
   }
 }
