--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "dev": "pnpm run --filter=\"./packages/*\" --parallel dev",
     "build": "pnpm run --filter=\"./packages/*\" build",
     "typecheck": "tsc --noEmit",
-    "release": "pnpm changeset version && git add . && git commit -m \"chore: bump\" && git push && pnpm build && pnpm changeset publish",
     "lint": "eslint .",
     "play": "npm -C playground run dev",
-    "test": "vitest"
+    "test": "vitest",
+    "release": "pnpm run build && bumpp packages/*/package.json --all -x 'pnpm run changelog' && pnpm publish --filter=\"./packages/*\"",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.21.2",
