--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "lint": "eslint .",
     "play": "npm -C playground run dev",
     "test": "vitest",
-    "release": "pnpm run build && bumpp packages/*/package.json --all -x 'pnpm run changelog' && pnpm publish --filter=\"./packages/*\"",
+    "release": "bumpp -r -x 'pnpm run changelog'",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
   },
   "devDependencies": {
