--- a/playground/package.json
+++ b/playground/package.json
@@ -12,5 +12,6 @@
     "vite-hyper-config": "^0.5.0",
     "vite-plugin-inspect": "^0.8.4",
     "vue": "catalog:"
-  }
+  },
+  "version": "1.6.0"
 }
