--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "version": "1.6.0",
   "packageManager": "pnpm@10.4.1",
   "description": "Vue JSX Vapor",
   "type": "module",
@@ -25,7 +26,7 @@
     "lint": "eslint .",
     "play": "npm -C playground run dev",
     "test": "vitest",
-    "release": "bumpp -r -x 'pnpm run changelog'",
+    "release": "bumpp -r --all -x 'pnpm run changelog'",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
   },
   "devDependencies": {
@@ -51,6 +52,5 @@
     "overrides": {
       "estree-walker": "2.0.2"
     }
-  },
-  "version": "1.6.0"
+  }
 }
