--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "tsup": "^8.1.0",
     "typescript": "^5.7.0",
     "unplugin": "^1.11.0",
+    "unplugin-raw": "^0.3.1",
     "vitest": "^1.6.0"
   },
   "pnpm": {
