--- a/packages/macros/package.json
+++ b/packages/macros/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "unplugin-vue-jsx-vapor",
+  "name": "@vue-jsx-vapor/macros",
   "version": "1.6.0",
   "packageManager": "pnpm@10.4.1",
-  "description": "Convert Vue JSX to Vapor",
+  "description": "Macros for Vue JSX Vapor",
   "type": "module",
   "keywords": [
-    "unplugin",
-    "vite",
-    "webpack",
-    "rollup",
     "transform",
     "vue-jsx",
+    "macros",
     "volar",
     "vapor"
   ],
@@ -36,59 +33,40 @@
       "import": "./dist/index.js"
     },
     "./astro": {
-      "dev": "./src/astro.ts",
       "require": "./dist/astro.cjs",
       "import": "./dist/astro.js"
     },
     "./rspack": {
-      "dev": "./src/rspack.ts",
       "require": "./dist/rspack.cjs",
       "import": "./dist/rspack.js"
     },
     "./vite": {
-      "dev": "./src/vite.ts",
       "require": "./dist/vite.cjs",
       "import": "./dist/vite.js"
     },
     "./webpack": {
-      "dev": "./src/webpack.ts",
       "require": "./dist/webpack.cjs",
       "import": "./dist/webpack.js"
     },
     "./rollup": {
-      "dev": "./src/rollup.ts",
       "require": "./dist/rollup.cjs",
       "import": "./dist/rollup.js"
     },
     "./esbuild": {
-      "dev": "./src/esbuild.ts",
       "require": "./dist/esbuild.cjs",
       "import": "./dist/esbuild.js"
     },
     "./nuxt": {
-      "dev": "./src/nuxt.ts",
       "require": "./dist/nuxt.cjs",
       "import": "./dist/nuxt.js"
     },
     "./api": {
-      "dev": "./src/api.ts",
       "require": "./dist/api.cjs",
       "import": "./dist/api.js"
     },
     "./raw": {
-      "dev": "./src/raw.ts",
       "require": "./dist/raw.cjs",
       "import": "./dist/raw.js"
-    },
-    "./rolldown": {
-      "dev": "./src/rolldown.ts",
-      "require": "./dist/rolldown.cjs",
-      "import": "./dist/rolldown.js"
-    },
-    "./unplugin": {
-      "dev": "./src/unplugin.ts",
-      "require": "./dist/unplugin.cjs",
-      "import": "./dist/unplugin.js"
     },
     "./volar": {
       "dev": "./src/volar.ts",
@@ -142,14 +120,6 @@
       "require": "./dist/api.cjs",
       "import": "./dist/api.js"
     },
-    "./rolldown": {
-      "require": "./dist/rolldown.cjs",
-      "import": "./dist/rolldown.js"
-    },
-    "./unplugin": {
-      "require": "./dist/unplugin.cjs",
-      "import": "./dist/unplugin.js"
-    },
     "./raw": {
       "require": "./dist/raw.cjs",
       "import": "./dist/raw.js"
@@ -162,20 +132,7 @@
   },
   "scripts": {
     "build": "tsup",
-    "dev": "DEV=true tsup",
-    "lint": "eslint .",
-    "play": "npm -C playground run dev",
-    "release": "bumpp && npm publish",
-    "build:fix": "esno ./scripts/postbuild.ts",
-    "test": "vitest"
-  },
-  "peerDependencies": {
-    "@nuxt/kit": "^3",
-    "@nuxt/schema": "^3",
-    "esbuild": "*",
-    "rollup": "^3",
-    "vite": ">=3",
-    "webpack": "^4 || ^5"
+    "dev": "DEV=true tsup"
   },
   "peerDependenciesMeta": {
     "@nuxt/kit": {
@@ -198,27 +155,17 @@
     }
   },
   "dependencies": {
-    "@babel/core": "catalog:",
-    "@babel/plugin-transform-typescript": "^7.26.8",
-    "@vue-jsx-vapor/babel": "workspace:*",
-    "@vue-jsx-vapor/compiler": "workspace:*",
-    "@vue-jsx-vapor/macros": "workspace:*",
-    "@vue-macros/volar": "3.0.0-beta.4",
-    "magic-string-stack": "^0.1.1",
-    "ts-macro": "catalog:",
-    "unplugin": "^1.11.0",
-    "unplugin-utils": "^0.2.4"
+    "@vue-macros/common": "3.0.0-beta.4",
+    "@vue/compiler-sfc": "catalog:",
+    "hash-sum": "^2.0.0",
+    "ts-macro": "catalog:"
   },
   "devDependencies": {
+    "@babel/types": "7.26.9",
     "@nuxt/kit": "^3.12.3",
     "@nuxt/schema": "^3.12.3",
-    "@types/babel__core": "catalog:",
-    "rollup": "^4.18.0",
-    "tsup": "^8.1.0",
-    "typescript": "^5.5.3",
-    "vite": "^6.0.0",
-    "vitest": "^1.6.0",
-    "vue": "catalog:",
-    "webpack": "^5.92.1"
+    "@types/hash-sum": "^1.0.2",
+    "@vue-macros/test-utils": "3.0.0-beta.4",
+    "vue": "catalog:"
   }
 }
